tdf#111785 Save hatch background color in pptx format.

When exporting to pptx from LO, the background color of
the hatching is preserved. The default background, when no
hatch background is set is transparent.

Change-Id: Ie44c89a9ce54eef49100b3e7b376c27c1a952fcf